Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2577

TFileTransport missuse of closesocket on windows platform

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.2
    • C++ - Library
    • None

    Description

      On windows platform , TFileTransport opens a file using the _open function, but close it using THRIFT_CLOSESOCKET(closesocket), and this may cause a TTransportException being throwed, which is not expected.

      Attachments

        Activity

          People

            henrique Henrique Mendonca
            suuyaoo suuyaoo
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: