THRIFT-2577 C++ TFileTransport missuse of closesocket on windows platform Patch: suuyaoo

This closes #142

---