lib/cpp/test/TFDTransportTest.cpp
@@ -19,6 +19,7 @@
 
 #include <cstdlib>
 #include <stdexcept>
+#include <iostream>
 #include <thrift/Thrift.h>
 #include <thrift/transport/TFDTransport.h>
 using apache::thrift::transport::TTransportException;
@@ -37,8 +38,10 @@ int main() {
       TFDTransport t(256, TFDTransport::CLOSE_ON_DESTROY);
       t.close();
     }
+    std::cout << "NOT OK 0!" << std::endl;
     std::abort();
   } catch (TTransportException) {
+    std::cout << "OK!" << std::endl;
   }
 
   try {
